--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>GCloud Speech Recognition Node + Socket.io</title>
-    <meta name="description" content="Google Cloud Speech Recognition with Node and Socket.io">
+    <title>Live Voice Translation with Google Cloud Media Translation API</title>
+    <meta name="description" content="Live Voice Translation with Google Cloud Media Translation API">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="assets/css/main.css">
@@ -13,7 +13,7 @@
 
 <body>
     <div class="wrapper">
-        <h1>Google Cloud Speech Node with Socket.io Playground</h1>
+        <h1>Speak up something in French and get it translated to English</h1>
 
         <audio></audio>
 
