Added en-fr specifics

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -13,19 +13,19 @@
 
 <body>
     <div class="wrapper">
-        <h1>Speak up something in French and get it translated to English</h1>
+        <h1>Traduction temps réel Anglais => Francais</h1>
 
         <audio></audio>
 
         <br>
-        <button id="startRecButton" type="button"> Start recording</button>
-        <button id="stopRecButton" type="button"> Stop recording</button>
+        <button id="startRecButton" type="button"> Démarrer la traduction</button>
+        <button id="stopRecButton" type="button"> Arrêter la traduction</button>
         <div id="recordingStatus">&nbsp;</div>
         <br>
 
         <div>
             <p id="ResultText">
-                <span class="greyText">No Speech to Text yet
+                <span class="greyText">Aucune traduction à afficher pour le moment ...
                     <span>
             </p>
         </div>
