--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -13,7 +13,7 @@
 
 <body>
     <div class="wrapper">
-        <h1>Traduction temps réel Anglais => Francais</h1>
+        <h1>Traduction temps réel Francais => Anglais</h1>
 
         <audio></audio>
 
